--- a/karma-master/adminproducts.html
+++ b/karma-master/adminproducts.html
@@ -60,6 +60,7 @@
 
             </select>
             <input type="text" id="pdescription" placeholder="Product Description" required>
+            <span id="charCount" class="char-count">20</span>
             <input type="number" id="pprice" placeholder="Product Price" required>
             <input type="text" id="pimageurl" placeholder="Product Image" required>
             <input type="number" id="pquantity" placeholder="Product Quantity" required>
