--- a/karma-master/login.html
+++ b/karma-master/login.html
@@ -51,7 +51,7 @@
 							<li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
 							<li class="nav-item submenu dropdown">
 								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-								 aria-expanded="false">Shop</a>
+								 aria-expanded="false">Categories</a>
 								<ul class="dropdown-menu">
 									<li class="nav-item"><a class="nav-link" href="category.html">Shop Category</a></li>
 									<li class="nav-item"><a class="nav-link" href="single-product.html">Product Details</a></li>
@@ -60,22 +60,10 @@
 									<li class="nav-item"><a class="nav-link" href="confirmation.html">Confirmation</a></li>
 								</ul>
 							</li>
-							<li class="nav-item submenu dropdown">
-								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-								 aria-expanded="false">Blog</a>
-								<ul class="dropdown-menu">
-									<li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
-									<li class="nav-item"><a class="nav-link" href="single-blog.html">Blog Details</a></li>
-								</ul>
-							</li>
 							<li class="nav-item submenu dropdown active">
-								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-								 aria-expanded="false">Pages</a>
-								<ul class="dropdown-menu">
-									<li class="nav-item active"><a class="nav-link" href="login.html">Login</a></li>
-									<li class="nav-item"><a class="nav-link" href="tracking.html">Tracking</a></li>
-									<li class="nav-item"><a class="nav-link" href="elements.html">Elements</a></li>
-								</ul>
+								<a href="login.html" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+								 aria-expanded="false">Login</a>
+								<b id="username_disp" name="username_disp" value="username"></b>
 							</li>
 							<li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
 						</ul>
@@ -123,36 +111,59 @@
 			<div class="row">
 				<div class="col-lg-6">
 					<div class="login_box_img">
-						<img class="img-fluid" src="img/login.jpg" alt="">
+						<img class="img-fluid" src="https://i.pinimg.com/564x/0b/7a/3f/0b7a3f3b20ae5305a2457d072ec4cd86.jpg" alt="">
 						<div class="hover">
-							<h4>New to our website?</h4>
-							<p>There are advances being made in science and technology everyday, and a good example of this is the</p>
-							<a class="primary-btn" href="registration.html">Create an Account</a>
+							<h4>New User?</h4>
+							<b class="primary-btn" onclick="createaccountviewchange()">Create an Account</b>
 						</div>
 					</div>
 				</div>
 				<div class="col-lg-6">
-					<div class="login_form_inner">
+					<div id="loginform" class="login_form_inner">
 						<h3>Log in to enter</h3>
 						<form class="row login_form" action="contact_process.php" method="post" id="contactForm" novalidate="novalidate">
 							<div class="col-md-12 form-group">
-								<input type="text" class="form-control" id="name" name="name" placeholder="Username" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Username'">
+								<input type="text" class="form-control" id="uname" name="name" placeholder="Username" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Username'">
 							</div>
 							<div class="col-md-12 form-group">
-								<input type="text" class="form-control" id="name" name="name" placeholder="Password" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Password'">
+								<input type="password" class="form-control" id="upassword" name="name" placeholder="Password" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Password'">
 							</div>
-							<div class="col-md-12 form-group">
-								<div class="creat_account">
-									<input type="checkbox" id="f-option2" name="selector">
-									<label for="f-option2">Keep me logged in</label>
-								</div>
+							<div id="error_msg" class="col-md-12 form-group margin-top-20px hidden">
+								<span class="error">Username or Password is incorrect!</span>
 							</div>
-							<div class="col-md-12 form-group">
-								<button type="submit" value="submit" class="primary-btn">Log In</button>
-								<a href="#">Forgot Password?</a>
+							<div class="col-md-12 form-group margin-top-20px">
+								<button type="button" onclick="userlogin()" class="primary-btn">Log In</button>
 							</div>
 						</form>
 					</div>
+<!--					Register form-->
+					<div id="registerform" class="login_form_inner padding-top-30px hidden">
+						<h3>Register</h3>
+						<form class="row login_form" action="contact_process.php" method="post" id="registerformForm" novalidate="novalidate">
+							<div class="col-md-12 form-group">
+								<input type="text" class="form-control" id="regname" name="regname" placeholder="Name" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Name'">
+							</div>
+							<div class="col-md-12 form-group">
+								<input type="text" class="form-control" id="regphone" name="regphone" placeholder="Phone" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Phone'">
+							</div>
+							<div class="col-md-12 form-group">
+								<input type="text" class="form-control" id="regemail" name="regemail" placeholder="Email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Email'">
+							</div>
+							<div class="col-md-12 form-group">
+								<input type="text" class="form-control" id="regaddress" name="regaddress" placeholder="Address" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Address'">
+							</div>
+							<div class="col-md-12 form-group">
+								<input type="password" class="form-control" id="regpassword" name="regpassword" placeholder="Password" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Password'">
+							</div>
+							<div class="col-md-12 form-group">
+								<input type="password" class="form-control" id="regconfirmpass" name="regconfirmpass" placeholder="Confirm Password" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Confirm Password'">
+							</div>
+							<div class="col-md-12 form-group">
+								<button type="button" value="reguuser" onclick="registerUser()" class="primary-btn">Register</button>
+							</div>
+						</form>
+					</div>
+
 				</div>
 			</div>
 		</div>
@@ -163,69 +174,31 @@
 	<footer class="footer-area section_gap">
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-3  col-md-6 col-sm-6">
+				<div class="col-lg-4  col-md-6 col-sm-6">
 					<div class="single-footer-widget">
 						<h6>About Us</h6>
 						<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore dolore
-							magna aliqua.
+							Discover Shoe Haven - Your one-stop destination for stylish and comfortable footwear. Find the perfect pair for any occasion and step into fashion-forward bliss today.
 						</p>
 					</div>
 				</div>
 				<div class="col-lg-4  col-md-6 col-sm-6">
 					<div class="single-footer-widget">
-						<h6>Newsletter</h6>
-						<p>Stay update with our latest</p>
-						<div class="" id="mc_embed_signup">
-
-							<form target="_blank" novalidate="true" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01"
-							 method="get" class="form-inline">
-
-								<div class="d-flex flex-row">
-
-									<input class="form-control" name="EMAIL" placeholder="Enter Email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Email '"
-									 required="" type="email">
-
-
-									<button class="click-btn btn btn-default"><i class="fa fa-long-arrow-right" aria-hidden="true"></i></button>
-									<div style="position: absolute; left: -5000px;">
-										<input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value="" type="text">
-									</div>
-
-									<!-- <div class="col-lg-4 col-md-4">
-													<button class="bb-btn btn"><span class="lnr lnr-arrow-right"></span></button>
-												</div>  -->
-								</div>
-								<div class="info"></div>
-							</form>
-						</div>
 					</div>
 				</div>
-				<div class="col-lg-3  col-md-6 col-sm-6">
+				<div class="col-lg-4  col-md-6 col-sm-6">
 					<div class="single-footer-widget mail-chimp">
 						<h6 class="mb-20">Instragram Feed</h6>
 						<ul class="instafeed d-flex flex-wrap">
-							<li><img src="img/i1.jpg" alt=""></li>
-							<li><img src="img/i2.jpg" alt=""></li>
-							<li><img src="img/i3.jpg" alt=""></li>
-							<li><img src="img/i4.jpg" alt=""></li>
-							<li><img src="img/i5.jpg" alt=""></li>
-							<li><img src="img/i6.jpg" alt=""></li>
-							<li><img src="img/i7.jpg" alt=""></li>
-							<li><img src="img/i8.jpg" alt=""></li>
+							<li><img class="insta-img-box" src="https://i.pinimg.com/564x/c1/0f/b1/c10fb1bf9073d8bb80e42478fe03c586.jpg" alt=""></li>
+							<li><img class="insta-img-box" src="https://i.pinimg.com/564x/00/47/e8/0047e8ec1d1a4f8ba9e85531ae3d9b70.jpg" alt=""></li>
+							<li><img class="insta-img-box" src="https://i.pinimg.com/564x/53/ce/f5/53cef5d5242dd8d7a187bce40576fd45.jpg" alt=""></li>
+							<li><img class="insta-img-box" src="https://i.pinimg.com/564x/46/37/a0/4637a09fc2d65766501b7e19754932f3.jpg" alt=""></li>
+							<li><img class="insta-img-box" src="https://i.pinimg.com/564x/db/68/25/db682568bb48655d7277cbbd195d6f73.jpg" alt=""></li>
+							<li><img class="insta-img-box" src="https://i.pinimg.com/564x/a0/0d/ff/a00dff391e981a6d45c60891572dde9b.jpg" alt=""></li>
+							<li><img class="insta-img-box" src="https://i.pinimg.com/564x/21/cd/50/21cd500700970eea3bf2a3ee3b2912a6.jpg" alt=""></li>
+							<li><img class="insta-img-box" src="https://i.pinimg.com/564x/a8/a5/9a/a8a59a38c85ff8ec3f7e3c1e88bfa774.jpg" alt=""></li>
 						</ul>
-					</div>
-				</div>
-				<div class="col-lg-2 col-md-6 col-sm-6">
-					<div class="single-footer-widget">
-						<h6>Follow Us</h6>
-						<p>Let us be social</p>
-						<div class="footer-social d-flex align-items-center">
-							<a href="#"><i class="fa fa-facebook"></i></a>
-							<a href="#"><i class="fa fa-twitter"></i></a>
-							<a href="#"><i class="fa fa-dribbble"></i></a>
-							<a href="#"><i class="fa fa-behance"></i></a>
-						</div>
 					</div>
 				</div>
 			</div>
@@ -241,6 +214,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 
 
 	<script src="js/vendor/jquery-2.2.4.min.js"></script>
+	<script src="js/sportylogin.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
 	 crossorigin="anonymous"></script>
 	<script src="js/vendor/bootstrap.min.js"></script>
